Refactor list template and parser files

--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
             </thead>
             <tbody>
                 {{ range . }}
-                    {{ if -WillAttend }}
+                    {{ if .WillAttend }}
                         <tr>
                             <td>{{ .Name }} </td>
                             <td>{{ .Email }} </td>
